// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionHeader correctly applies the theme context className 1`] = `
<ActionHeaderContainer
  className="customClassName"
  endContent={
    <div
      className="right-buttons orion-fusion-theme"
    >
      <Button
        aria-describedby="terra-action-header-close-button-14"
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  }
  id="14"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  level={1}
  startContent={
    <div
      className="left-buttons orion-fusion-theme"
    >
      <Button
        aria-describedby="terra-action-header-maximize-button-14"
        className="header-button maximize-button"
        data-terra-action-header="maximize-button"
        icon={
          <span
            className="header-icon maximize"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.maximize"
        type="button"
        variant="utility"
      />
    </div>
  }
  text="Action Header"
/>
`;

exports[`ActionHeader should render a default action header 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="1"
  level={1}
  startContent={null}
/>
`;

exports[`ActionHeader should render an action header with back and close buttons and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={
    <div
      className="right-buttons"
    >
      <Button
        aria-describedby="terra-action-header-close-button-5"
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  }
  id="5"
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <Button
        className="header-button back-button"
        data-terra-action-header="back-button"
        icon={
          <span
            className="header-icon back"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.back"
        type="button"
        variant="utility"
      />
    </div>
  }
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with back button and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="3"
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <Button
        className="header-button back-button"
        data-terra-action-header="back-button"
        icon={
          <span
            className="header-icon back"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.back"
        type="button"
        variant="utility"
      />
    </div>
  }
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with close button and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={
    <div
      className="right-buttons"
    >
      <Button
        aria-describedby="terra-action-header-close-button-4"
        className="header-button close-button"
        data-terra-action-header="close-button"
        icon={
          <span
            className="header-icon close"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.close"
        type="button"
        variant="utility"
      />
    </div>
  }
  id="4"
  level={1}
  startContent={null}
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with custom button and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="7"
  level={1}
  startContent={null}
  text="Action Header"
>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Custom Button"
    type="button"
    variant="neutral"
  />
</InjectIntl(ActionHeaderContainer)>
`;

exports[`ActionHeader should render an action header with level three header element and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="6"
  level={3}
  startContent={null}
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with maximize button and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="9"
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <Button
        aria-describedby="terra-action-header-maximize-button-9"
        className="header-button maximize-button"
        data-terra-action-header="maximize-button"
        icon={
          <span
            className="header-icon maximize"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.maximize"
        type="button"
        variant="utility"
      />
    </div>
  }
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with minimize button and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="10"
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <Button
        aria-describedby="terra-action-header-minimize-button-10"
        className="header-button minimize-button"
        data-terra-action-header="minimize-button"
        icon={
          <span
            className="header-icon minimize"
          />
        }
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        text="Terra.actionHeader.minimize"
        type="button"
        variant="utility"
      />
    </div>
  }
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with multiple custom buttons and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="8"
  level={1}
  startContent={null}
  text="Action Header"
>
  <span>
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Custom Button"
      type="button"
      variant="neutral"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Custom Button"
      type="button"
      variant="neutral"
    />
  </span>
</InjectIntl(ActionHeaderContainer)>
`;

exports[`ActionHeader should render an action header with next and previous buttons and title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="11"
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <Button
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Terra.actionHeader.previous"
          type="button"
          variant="utility"
        />
        <Button
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Terra.actionHeader.next"
          type="button"
          variant="utility"
        />
      </div>
    </div>
  }
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="2"
  level={1}
  startContent={null}
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title, enabled next button, and disabled previous button 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="12"
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <Button
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={true}
          isIconOnly={true}
          isReversed={false}
          text="Terra.actionHeader.previous"
          type="button"
          variant="utility"
        />
        <Button
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Terra.actionHeader.next"
          type="button"
          variant="utility"
        />
      </div>
    </div>
  }
  text="Action Header"
/>
`;

exports[`ActionHeader should render an action header with title, enabled previous button, and disabled next button 1`] = `
<InjectIntl(ActionHeaderContainer)
  endContent={null}
  id="13"
  level={1}
  startContent={
    <div
      className="left-buttons"
    >
      <div
        className="previous-next-button-group"
      >
        <Button
          className="header-button previous-button"
          data-terra-action-header="previous-button"
          icon={
            <span
              className="header-icon previous"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={true}
          isReversed={false}
          onClick={[Function]}
          text="Terra.actionHeader.previous"
          type="button"
          variant="utility"
        />
        <Button
          className="header-button next-button"
          data-terra-action-header="next-button"
          icon={
            <span
              className="header-icon next"
            />
          }
          isBlock={false}
          isCompact={false}
          isDisabled={true}
          isIconOnly={true}
          isReversed={false}
          text="Terra.actionHeader.next"
          type="button"
          variant="utility"
        />
      </div>
    </div>
  }
  text="Action Header"
/>
`;
